# AniMonad

./: .gitignore  CHANGELOG.md  LICENSE  README.md  animonad.cabal
app/: Main.hs
src/: AniMonad.hs  TH.hs
src/AniMonad/: Config.hs  Core.hs  Element.hs  Export.hs  TH.hs
src/AniMonad/Core/: Keys.hs  LensExt.hs  Lerp.hs  Signal.hs
src/AniMonad/Element/: Base.hs  Elements.hs  Layout.hs  TH.hs
svg-render/: Cargo.toml
svg-render/src/: main.rs
test/: Main.hs  TH.hs
