cabal-version:   3.0
name:            animonad
version:         0.1.0.0
maintainer:      ofek.r.guy@gmail.com
author:          A-Walrus
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:  AniMonad
    hs-source-dirs:   src
    other-modules:
        AniMonad.Core
        AniMonad.Core.LensExt
        AniMonad.Core.Lerp
        AniMonad.Core.Signal
        AniMonad.Core.Keys
        AniMonad.Element
        AniMonad.Element.Base
        AniMonad.Element.Elements
        AniMonad.Element.TH
        AniMonad.Export

    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        lens ^>=5.3.2,
        ease ^>=0.1.0,
        lucid-svg ^>=0.7.2.0,
        text ^>=2.1.1,
        colour >=2.3.6,
        template-haskell,
        linear,
        directory,
        process,
        filepath

executable animonad
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        animonad

test-suite animonad-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:    TH
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        HUnit ^>=1.6,
        template-haskell,
        animonad
